# LrcEdit-Android

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output.json
app/src/androidTest/java/com/lcz/lrcedit/lrcedit/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: netbase.cpp
app/src/main/java/com/lcz/lrcedit/lrcedit/: EditActivity.java  EditLrcActivity.java  EditTimeActivity.java  EditTxtActivity.java  ListActivity.java  MainActivity.java  TxtListActivity.java  previewLrcActivity.java
app/src/main/java/com/lcz/lrcedit/lrcedit/other/: MyToast.java  RecycleViewListener.java  TitleAdapter.java
app/src/main/res/drawable/: ic_control_play.xml  ic_lrc.xml  ic_save.xml  ic_timer.xml
app/src/main/res/layout/: activity_edit.xml  activity_edittime.xml  activity_list.xml  activity_main.xml  dialog.xml  editlrc_activity.xml  edittxt_activity.xml  listadapter.xml  main_activity.xml  popupwindow_help.xml  txtlist_activity.xml  txtlist_recycle_item.xml
app/src/main/res/menu/: editlrc_toolbar.xml  edittxt_toolbar.xml  toolbar.xml  toolbartime.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/lcz/lrcedit/lrcedit/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lrcmoudle/src/androidTest/java/com/lcz/lrcedit/lrcmoudle/: ExampleInstrumentedTest.java
lrcmoudle/src/main/: AndroidManifest.xml
lrcmoudle/src/main/java/com/lcz/lrcedit/lrcmoudle/: LrcEdit.java  LrcEditor.java  LrcString.java  LrcTimeEdit.java  (+3 more)
lrcmoudle/src/main/res/values/: strings.xml
(+2 files in other folders)
